--- a/Bootcamp-materials/notebooks/Day2/day2-lab1-classification-and-regression.ipynb
+++ b/Bootcamp-materials/notebooks/Day2/day2-lab1-classification-and-regression.ipynb
@@ -310,7 +310,7 @@
   "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
