--- a/Bootcamp-materials/notebooks/Day2/day2-lab2-nearest-neighbors.ipynb
+++ b/Bootcamp-materials/notebooks/Day2/day2-lab2-nearest-neighbors.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "846"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,8 +145,12 @@
    "outputs": [],
    "source": [
     "y_pred = []\n",
+    "# Cycle through all of X_test distance arrays\n",
+    "# mydist is an \"array of arrays\". Each row is an array of distances from an X_test point to all of the X_train points\n",
     "for i in range(len(mydist)):\n",
+    "    # What point in X_train is closest to this point of X_test?\n",
     "    myindex = np.argmin(mydist[i])\n",
+    "    # Assign y (0 or 1) of the training particle that is closest\n",
     "    y_pred.append(y_train[myindex])"
    ]
   },
@@ -211,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
