--- a/Bootcamp-materials/notebooks/Day2/day2-lab3-linear-models-in-practice.ipynb
+++ b/Bootcamp-materials/notebooks/Day2/day2-lab3-linear-models-in-practice.ipynb
@@ -14,13 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "% matplotlib inline\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn.datasets import load_boston\n",
     "from sklearn.linear_model import Ridge, LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -506,7 +507,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "df = pd.DataFrame({'salary': [103, 89, 142, 54, 63, 219],\n",
     "                   'boro': ['Manhatten', 'Queens', 'Manhatten', 'Brooklyn', 'Brooklyn', 'Bronx']})\n",
     "df"
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,37 +943,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "bad input shape (24420, 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-148-405e9d9bd6d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmydata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmytarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m#print(X_train)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.6/site-packages/sklearn/linear_model/logistic.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m   1214\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1215\u001b[0m         X, y = check_X_y(X, y, accept_sparse='csr', dtype=_dtype,\n\u001b[0;32m-> 1216\u001b[0;31m                          order=\"C\")\n\u001b[0m\u001b[1;32m   1217\u001b[0m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    576\u001b[0m                         dtype=None)\n\u001b[1;32m    577\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 578\u001b[0;31m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolumn_or_1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwarn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    579\u001b[0m         \u001b[0m_assert_all_finite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    580\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_numeric\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkind\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'O'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcolumn_or_1d\u001b[0;34m(y, warn)\u001b[0m\n\u001b[1;32m    612\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    613\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 614\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"bad input shape {0}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    615\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    616\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: bad input shape (24420, 2)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "0         <=50K\n",
+      "1         <=50K\n",
+      "2         <=50K\n",
+      "3         <=50K\n",
+      "4         <=50K\n",
+      "5         <=50K\n",
+      "6         <=50K\n",
+      "7          >50K\n",
+      "8          >50K\n",
+      "9          >50K\n",
+      "10         >50K\n",
+      "11         >50K\n",
+      "12        <=50K\n",
+      "13        <=50K\n",
+      "14         >50K\n",
+      "15        <=50K\n",
+      "16        <=50K\n",
+      "17        <=50K\n",
+      "18        <=50K\n",
+      "19         >50K\n",
+      "20         >50K\n",
+      "21        <=50K\n",
+      "22        <=50K\n",
+      "23        <=50K\n",
+      "24        <=50K\n",
+      "25         >50K\n",
+      "26        <=50K\n",
+      "27         >50K\n",
+      "28        <=50K\n",
+      "29        <=50K\n",
+      "          ...  \n",
+      "32531     <=50K\n",
+      "32532      >50K\n",
+      "32533      >50K\n",
+      "32534     <=50K\n",
+      "32535     <=50K\n",
+      "32536      >50K\n",
+      "32537     <=50K\n",
+      "32538      >50K\n",
+      "32539      >50K\n",
+      "32540     <=50K\n",
+      "32541     <=50K\n",
+      "32542     <=50K\n",
+      "32543     <=50K\n",
+      "32544     <=50K\n",
+      "32545      >50K\n",
+      "32546     <=50K\n",
+      "32547     <=50K\n",
+      "32548     <=50K\n",
+      "32549     <=50K\n",
+      "32550     <=50K\n",
+      "32551     <=50K\n",
+      "32552     <=50K\n",
+      "32553     <=50K\n",
+      "32554      >50K\n",
+      "32555     <=50K\n",
+      "32556     <=50K\n",
+      "32557      >50K\n",
+      "32558     <=50K\n",
+      "32559     <=50K\n",
+      "32560      >50K\n",
+      "Name: income, Length: 32561, dtype: object\n"
      ]
     }
    ],
    "source": [
     "#TODO\n",
-    "data = pd.read_csv(\"https://github.com/amueller/ml-training-advanced/raw/master/notebooks/data/adult.csv\", index_col=0, usecols=[0,1,2,3,4,5,6,7,8,9,10,11,12,13])\n",
-    "target = pd.read_csv(\"https://github.com/amueller/ml-training-advanced/raw/master/notebooks/data/adult.csv\", index_col=0, usecols=[0,14])\n",
+    "data = pd.read_csv(\"adult.csv\", index_col=0)\n",
     "mydata = pd.get_dummies(data,columns=[\"age\",\"workclass\",\"education\",\"education-num\",\"marital-status\",\"occupation\",\"relationship\",\"race\",\"gender\",\"capital-gain\",\"capital-loss\",\"hours-per-week\",\"native-country\"])\n",
-    "mytarget = pd.get_dummies(target,columns=[\"income\"])\n",
     "lr = LogisticRegression()\n",
-    "X_train, X_test, y_train, y_test = train_test_split(mydata, mytarget, random_state=0)\n",
-    "#print(X_train)\n",
-    "lr.fit(X_train, y_train)\n",
-    "print(lr.score(X_train, y_train))\n",
-    "print(lr.score(X_test, y_test))"
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(mydata, mydata.income, random_state=0)\n",
+    "#scaler = StandardScaler()\n",
+    "# https://stackoverflow.com/questions/14688391/how-to-apply-standardization-to-svms-in-scikit-learn\n",
+    "#X_train_scaled = scaler.fit(X_train).transform(X_train)\n",
+    "#X_test_scaled = scaler.fit(X_test).transform(X_test)\n",
+    "#lr.fit(X_train_scaled, y_train)\n",
+    "#print(lr.score(X_train, y_train))\n",
+    "#print(lr.score(X_test, y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
