--- a/Bootcamp-materials/notebooks/Day2/day2-lab3-linear-models-in-practice.ipynb
+++ b/Bootcamp-materials/notebooks/Day2/day2-lab3-linear-models-in-practice.ipynb
@@ -911,33 +911,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train score = 0.240\n",
-      "Test score  = 0.243\n"
+      "Train score = 0.853\n",
+      "Test score  = 0.850\n"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv(\"adult.csv\", index_col=0,usecols=[0,1,2,3,4,5,6,7,8,9,10,11,12,13])\n",
-    "target = pd.read_csv(\"adult.csv\", index_col=0,usecols=[0,14])\n",
-    "\n",
-    "mydata = pd.get_dummies(data,columns=[\"workclass\",\"education\",\"education-num\",\"marital-status\",\"occupation\",\"relationship\",\"race\",\"gender\",\"capital-gain\",\"capital-loss\",\"hours-per-week\",\"native-country\"])\n",
-    "mytarget = pd.get_dummies(target,columns=[\"income\"])\n",
+    "data = pd.read_csv(\"adult.csv\", index_col=0)\n",
+    "target = data.pop('income')\n",
+    "data = pd.get_dummies(data)\n",
     "lr = LogisticRegression()\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(mydata, mytarget[\"income_ <=50K\"], random_state=0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data, target, random_state=0)\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit(X_train).transform(X_train)\n",
     "X_test_scaled = scaler.fit(X_train).transform(X_test)\n",
     "lr.fit(X_train_scaled, y_train)\n",
-    "print(\"Train score = {0:.3f}\".format(lr.score(X_train, y_train)))\n",
-    "print(\"Test score  = {0:.3f}\".format(lr.score(X_test, y_test)))"
+    "print(\"Train score = {0:.3f}\".format(lr.score(X_train_scaled, y_train)))\n",
+    "print(\"Test score  = {0:.3f}\".format(lr.score(X_test_scaled, y_test)))"
    ]
   },
   {
