--- a/Bootcamp-materials/notebooks/Day3/day3-cross-validation-and-metrics.ipynb
+++ b/Bootcamp-materials/notebooks/Day3/day3-cross-validation-and-metrics.ipynb
@@ -8,6 +8,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.datasets import load_boston, load_digits\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.linear_model import LogisticRegression, Ridge\n",
+    "from sklearn.metrics import average_precision_score, precision_recall_curve\n",
+    "from sklearn.model_selection import cross_val_score, GridSearchCV, train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,19 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_boston\n",
     "boston = load_boston()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    0.001     0.01      0.1       1.       10.      100.     1000.   ]\n"
+     ]
+    }
+   ],
    "source": [
     "alphas = np.logspace(-3, 3, 7)\n",
     "np.set_printoptions(suppress=True)\n",
@@ -51,11 +75,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing parameter search...\n",
+      "       alpha        score\n",
+      "    0.001000     0.698127\n",
+      "    0.010000     0.698149\n",
+      "    0.100000     0.698359\n",
+      "    1.000000     0.700425\n",
+      "   10.000000     0.717783\n",
+      "  100.000000     0.759543\n",
+      " 1000.000000     0.568988\n",
+      "maximum score =     0.759543\n",
+      "chosen alpha  =   100.000000\n",
+      "Performing fit on entire training set...\n",
+      "Peforming test...\n",
+      "score =     0.583461\n"
+     ]
+    }
+   ],
    "source": [
-    "# solution here"
+    "X_trainval, X_test, y_trainval, y_test = train_test_split(boston.data, boston.target, random_state=0)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_trainval, y_trainval, random_state=0)\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_val = scaler.transform(X_val)\n",
+    "X_trainval = scaler.transform(X_trainval)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "print(\"Performing parameter search...\")\n",
+    "scores = []\n",
+    "print(\"{0:>12s} {1:>12s}\".format(\"alpha\",\"score\"))\n",
+    "for a in alphas:\n",
+    "    ridge = Ridge(a)\n",
+    "    ridge.fit(X_train, y_train)\n",
+    "    score = ridge.score(X_val, y_val)\n",
+    "    scores.append(score)\n",
+    "    print(\"{0:12.6f} {1:12.6f}\".format(a,score))\n",
+    "    \n",
+    "print(\"maximum score = {:12.6f}\".format(scores[np.argmax(scores)]))\n",
+    "myalpha = alphas[np.argmax(scores)]\n",
+    "print(\"chosen alpha  = {:12.6f}\".format(myalpha))\n",
+    "\n",
+    "print(\"Performing fit on entire training set...\")\n",
+    "ridge = Ridge(myalpha)\n",
+    "ridge.fit(X_trainval, y_trainval)\n",
+    "print(\"Peforming test...\")\n",
+    "score = ridge.score(X_test, y_test)\n",
+    "print(\"score = {:12.6f}\".format(score))"
    ]
   },
   {
@@ -72,29 +145,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hold out the following range: 0-101\n",
+      "[-- -- -- -- -- -- -- -- -- -- -- -- --]\n",
+      "[0.13262 0.0 8.56 0.0 0.52 5.851 96.7 2.1069 5.0 384.0 20.9 394.05 16.47]\n",
+      "0.742522041858\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "score =     0.742522\n",
+      "Hold out the following range: 101-202\n",
+      "[0.13262 0.0 8.56 0.0 0.52 5.851 96.7 2.1069 5.0 384.0 20.9 394.05 16.47]\n",
+      "[-- -- -- -- -- -- -- -- -- -- -- -- --]\n",
+      "0.742522041858\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "score =     0.742522\n",
+      "Hold out the following range: 202-303\n",
+      "[-- -- -- -- -- -- -- -- -- -- -- -- --]\n",
+      "[0.13262 0.0 8.56 0.0 0.52 5.851 96.7 2.1069 5.0 384.0 20.9 394.05 16.47]\n",
+      "0.742522041858\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "score =     0.742522\n",
+      "Hold out the following range: 303-404\n",
+      "[-- -- -- -- -- -- -- -- -- -- -- -- --]\n",
+      "[0.13262 0.0 8.56 0.0 0.52 5.851 96.7 2.1069 5.0 384.0 20.9 394.05 16.47]\n",
+      "0.742522041858\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "score =     0.742522\n",
+      "Hold out the following range: 404-505\n",
+      "[-- -- -- -- -- -- -- -- -- -- -- -- --]\n",
+      "[0.13262 0.0 8.56 0.0 0.52 5.851 96.7 2.1069 5.0 384.0 20.9 394.05 16.47]\n",
+      "0.742522041858\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "[-0.40349384 -0.48832004 -0.37538041 -0.27288841 -0.29910567 -0.6179684\n",
+      "  1.000203   -0.80320985 -0.52493098 -0.14549091  1.13299322  0.41034991\n",
+      "  0.53341842]\n",
+      "score =     0.742522\n",
+      "[0.7425220418579892, 0.7425220418579892, 0.7425220418579892, 0.7425220418579892, 0.7425220418579892]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
+    "# TODO: problem with masking arrays\n",
+    "\n",
     "X = boston.data[:505]  # we make it divisible by n_folds to make the code simpler\n",
-    "y = boston.target\n",
-    "\n",
-    "\n",
+    "y = boston.target[:505]\n",
     "scores = []\n",
     "n_folds = 5\n",
     "n_samples = len(X)\n",
-    "fold_size = n_samples // 5\n",
-    "for fold in range(n_folds):\n",
-    "    hold_out_mask = np.zeros(n_samples, dtype=np.bool)\n",
-    "    # assign True to the samples that are supposed to be held out in this fold\n",
-    "    # ...\n",
-    "    training_mask = ~hold_out_mask  # training data is inverse of hold out data\n",
-    "    # assign training and hold-out portions\n",
-    "    # build model\n",
-    "    # compute scores\n",
-    "    # ...\n",
+    "fold_size = n_samples / n_folds\n",
+    "alpha = 1.0\n",
     "\n",
+    "for fold in range(n_folds):\n",
+    "    \n",
+    "    X_hold_out_mask = np.zeros(X.shape, dtype=np.bool)\n",
+    "    y_hold_out_mask = np.zeros(y.shape, dtype=np.bool)\n",
+    "    \n",
+    "    # assign True to the samples that are supposed to be held out in this fold\n",
+    "    b = int((fold)*fold_size)\n",
+    "    e = int((fold+1)*fold_size)\n",
+    "    print(\"Hold out the following range: {0}-{1}\".format(b,e))\n",
+    "    X_hold_out_mask[b:e,:] = True\n",
+    "    y_hold_out_mask[b:e] = True\n",
+    "    X_training_mask = ~X_hold_out_mask  # training data is inverse of hold out data\n",
+    "    y_training_mask = ~y_hold_out_mask\n",
+    "\n",
+    "    # assign training and hold-out portions\n",
+    "    X_train = np.ma.masked_array(X, X_hold_out_mask)\n",
+    "    y_train = np.ma.masked_array(y, y_hold_out_mask)\n",
+    "    X_test = np.ma.masked_array(X, X_training_mask)\n",
+    "    y_test = np.ma.masked_array(y, y_training_mask)\n",
+    "    \n",
+    "    # FIXME - masking works here\n",
+    "    print(X_test[105,:])\n",
+    "    print(X_train[105,:])\n",
+    "\n",
+    "    # build model - scaling doesn't seem to be using masks!!\n",
+    "    scaler = StandardScaler()\n",
+    "    scaler.fit(X_train)\n",
+    "    X_train = scaler.transform(X_train)\n",
+    "    X_test = scaler.transform(X_test)\n",
+    "\n",
+    "    ridge = Ridge(alpha)\n",
+    "    ridge.fit(X_train, y_train)\n",
+    "    print(ridge.score(X_train, y_train))\n",
+    "\n",
+    "    # FIXME - but masking is now gone!\n",
+    "    print(X_test[105,:])\n",
+    "    print(X_train[105,:])\n",
+    "\n",
+    "    # compute scores\n",
+    "    score = ridge.score(X_test_scaled, y_test)\n",
+    "    print(\"score = {:12.6f}\".format(score))\n",
+    "    scores.append(score)\n",
+    "    \n",
     "print(scores)"
    ]
   },
@@ -108,14 +278,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.60046754  0.52752528 -1.05360152]\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "scores_sklearn = cross_val_score() # fill in missing arguments\n",
+    "X_train = X\n",
+    "y_train = y\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "ridge = Ridge(1.0)\n",
+    "ridge.fit(X_train, y_train)\n",
+    "scores_sklearn = cross_val_score(ridge,X_train,y_train) # fill in missing arguments\n",
     "\n",
-    "# compare scores_sklearn with scores"
+    "# compare scores_sklearn with scores\n",
+    "print(scores_sklearn)"
    ]
   },
   {
@@ -148,12 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
     "alphas = np.logspace(-3, 3, 7)\n",
     "param_grid = {'alpha':  alphas}\n",
     "\n",
@@ -175,21 +357,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "results = pd.DataFrame(grid.cv_results_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "results.columns"
@@ -198,9 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "results.params"
@@ -216,9 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "results.plot('param_n_neighbors', 'mean_train_score')\n",
@@ -271,7 +444,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_digits\n",
     "\n",
     "# ....\n",
     "# create X_train, X_test, y_train, y_test for \"4 vs rest\""
@@ -290,9 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
     "\n",
     "lr = LogisticRegression()\n",
     "tree = DecisionTreeClassifier(max_depth=2)\n",
@@ -322,7 +492,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import precision_recall_curve\n",
     "positive_probs_lr = lr.predict_proba(X_test)[:, 1]\n",
     "# complete:\n",
     "# positive_probs_tree = tree.\n",
@@ -342,7 +511,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import average_precision_score\n",
     "# ...\n"
    ]
   },
@@ -373,8 +541,8 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
-   "language": "python",
+   "display_name": "Python 3",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -387,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
