--- a/Bootcamp-materials/notebooks/Day3/day3-cross-validation-and-metrics.ipynb
+++ b/Bootcamp-materials/notebooks/Day3/day3-cross-validation-and-metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "alphas = np.logspace(-3, 3, 7)\n",
     "np.set_printoptions(suppress=True)\n",
     "print(alphas)"
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +261,7 @@
     "    print(X_train[105,:])\n",
     "\n",
     "    # compute scores\n",
-    "    score = ridge.score(X_test_scaled, y_test)\n",
+    "    score = ridge.score(X_test, y_test)\n",
     "    print(\"score = {:12.6f}\".format(score))\n",
     "    scores.append(score)\n",
     "    \n",
@@ -279,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.60046754  0.52752528 -1.05360152]\n"
+      "[ 0.6386759   0.72005835  0.58512144  0.09886789 -0.174504  ]\n"
      ]
     }
    ],
@@ -298,7 +297,7 @@
     "X_train = scaler.transform(X_train)\n",
     "ridge = Ridge(1.0)\n",
     "ridge.fit(X_train, y_train)\n",
-    "scores_sklearn = cross_val_score(ridge,X_train,y_train) # fill in missing arguments\n",
+    "scores_sklearn = cross_val_score(ridge,X_train,y_train,cv=5)\n",
     "\n",
     "# compare scores_sklearn with scores\n",
     "print(scores_sklearn)"
@@ -317,6 +316,92 @@
     "- for each value of alpha, call ``cross_val_score`` on the training set, and compute the mean cross-validated accuracy.\n",
     "- Select the parameter with the best mean crossvalidation accuracy, and build a model on all of the training data\n",
     "- evaluate the model on the test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing parameter search...\n",
+      "alpha: 0.001\n",
+      "Cross validated scores:\n",
+      "[ 0.76238697  0.56939068  0.77952221  0.70772969  0.79034167]\n",
+      "Mean cv score:     0.721874\n",
+      "\n",
+      "alpha: 0.01\n",
+      "Cross validated scores:\n",
+      "[ 0.76240138  0.56938802  0.77952438  0.7077228   0.79035472]\n",
+      "Mean cv score:     0.721878\n",
+      "\n",
+      "alpha: 0.1\n",
+      "Cross validated scores:\n",
+      "[ 0.76254486  0.56936155  0.77954572  0.70765383  0.79048404]\n",
+      "Mean cv score:     0.721918\n",
+      "\n",
+      "alpha: 1.0\n",
+      "Cross validated scores:\n",
+      "[ 0.76392265  0.5691061   0.77972178  0.70696038  0.79166431]\n",
+      "Mean cv score:     0.722275\n",
+      "\n",
+      "alpha: 10.0\n",
+      "Cross validated scores:\n",
+      "[ 0.77374246  0.56785091  0.77921536  0.70018795  0.79683623]\n",
+      "Mean cv score:     0.723567\n",
+      "\n",
+      "alpha: 100.0\n",
+      "Cross validated scores:\n",
+      "[ 0.78133063  0.59449826  0.74215667  0.65395722  0.76706821]\n",
+      "Mean cv score:     0.707802\n",
+      "\n",
+      "alpha: 1000.0\n",
+      "Cross validated scores:\n",
+      "[ 0.57349832  0.53316797  0.48419302  0.42576949  0.52893181]\n",
+      "Mean cv score:     0.509112\n",
+      "\n",
+      "maximum score =     0.723567\n",
+      "chosen alpha  =    10.000000\n",
+      "Performing fit on entire training set...\n",
+      "Peforming test...\n",
+      "score =     0.633709\n"
+     ]
+    }
+   ],
+   "source": [
+    "alphas = np.logspace(-3, 3, 7)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(boston.data, boston.target, random_state=0)\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "print(\"Performing parameter search...\")\n",
+    "scores = []\n",
+    "for a in alphas:\n",
+    "    print(\"alpha: {0}\".format(a))\n",
+    "    ridge = Ridge(a)\n",
+    "    ridge.fit(X_train, y_train)\n",
+    "    cvscore = cross_val_score(ridge,X_train,y_train,cv=5)\n",
+    "    print(\"Cross validated scores:\")\n",
+    "    print(cvscore)\n",
+    "    score = np.mean(cvscore)\n",
+    "    scores.append(score)\n",
+    "    print(\"Mean cv score: {0:12.6f}\\n\".format(score))\n",
+    "    \n",
+    "print(\"maximum score = {:12.6f}\".format(scores[np.argmax(scores)]))\n",
+    "myalpha = alphas[np.argmax(scores)]\n",
+    "print(\"chosen alpha  = {:12.6f}\".format(myalpha))\n",
+    "\n",
+    "print(\"Performing fit on entire training set...\")\n",
+    "ridge = Ridge(myalpha)\n",
+    "ridge.fit(X_trainval, y_trainval)\n",
+    "print(\"Peforming test...\")\n",
+    "score = ridge.score(X_test, y_test)\n",
+    "print(\"score = {:12.6f}\".format(score))"
    ]
   },
   {
