fix broken notebook

--- a/Bootcamp-materials/notebooks/Day3/day3-trees-and-forests.ipynb
+++ b/Bootcamp-materials/notebooks/Day3/day3-trees-and-forests.ipynb
@@ -1470,6 +1470,7 @@
     "scores = pd.DataFrame(grid.cv_results_)\n",
     "scores.plot(x='param_max_leaf_nodes', y=['mean_train_score', 'mean_test_score'], ax=plt.gca())\n",
     "plt.legend(loc=(1, 0))\n",
+    "plt.show()"
    ]
   },
   {
