add note on status

--- a/Bootcamp-materials/notebooks/Day3/day3-cross-validation-and-metrics.ipynb
+++ b/Bootcamp-materials/notebooks/Day3/day3-cross-validation-and-metrics.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cross validation and model selection"
+    "# Cross validation and model selection\n",
+    "\n",
+    "Task 3 has problems.\n",
+    "Tasks 6 and 7 are not complete.\n",
+    "-W"
    ]
   },
   {
