--- a/Bootcamp-materials/notebooks/Day1/doc/tutorial_day1_part2.ipynb
+++ b/Bootcamp-materials/notebooks/Day1/doc/tutorial_day1_part2.ipynb
@@ -1210,7 +1210,7 @@
   "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
