--- a/notebooks/day2-lab2-nearest-neighbors.ipynb
+++ b/notebooks/day2-lab2-nearest-neighbors.ipynb
@@ -212,19 +212,20 @@
     }
    ],
    "source": [
-    "def myNearestNeighb(k,d):\n",
+    "def myNearestNeighb(num_neighbors, distances):\n",
+    "    # Returns a list. np.argsort(dist) sorts the distances for that point, least to greatest\n",
+    "    # From there we only care about the first num_neighbors, which we slice\n",
+    "    # Then that is passed to y_train, and we use .sum() to sum up all the labels. That summation\n",
+    "    # is divided by the number of neighbors. If there are more 1's than 0's then the ratio > 0.5 and we predict 1.\n",
+    "    # If there are more 0's than 1's, the the ratio is < 0.5 and we predict 0\n",
     "    y_pred = []\n",
-    "    # Cycle through each saved sets of distances\n",
-    "    for i in range(len(d)):\n",
-    "        # Sort this set of distances, least to greatest, saving their array locations\n",
-    "        dargsorted = np.argsort(d[i])\n",
-    "        mysum = 0.0\n",
-    "        for j in range(k):\n",
-    "            mysum = mysum + y_train[dargsorted[j]]\n",
-    "        # The following tests to see if the 1's or 0's are the majority classification\n",
-    "        y_pred.append(round(mysum/k))\n",
+    "    for dist in distances:\n",
+    "        sorted_neighbors = np.argsort(dist)[:num_neighbors] \n",
+    "        mysum = y_train[sorted_neighbors].sum()\n",
+    "        y_pred.append(round(mysum/num_neighbors))\n",
     "    return y_pred\n",
-    "        \n",
+    "# less readable one-liner:\n",
+    "#myNearestNeighb = lambda num_neighbors, distances: [ round(y_train[np.argsort(dist)[:num_neighbors]].sum()/num_neighbors) for dist in distances ]\n",
     "y_pred = myNearestNeighb(5,mydist)\n",
     "print(\"Accuracy = {0:.3f}\".format(accuracy_score(y_test, y_pred)))"
    ]
